fix: correct a link and background color on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1453,7 +1453,7 @@ a.newer-posts:hover {
             justify-content: space-between;
     width: 100%;
     padding: 10px;
-    background-color: #010101;
+    background-color: #eee;
     color: #020202;
     -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
             box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
